Fix spacing and change text -fixed bottom margin on games and runs divs -changed get game to show game

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -23,11 +23,11 @@ h1 {
 }
 
 #games {
-    margin-bottom: 50px;
+    margin-bottom: 200px;
 }
 
 #runs {
-    margin-bottom: 50px;
+    margin-bottom: 200px;
 }
 
 #game-display {
